assets/style.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

title{
    background-color: black;
}

.main-header {
    padding: 50px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: grey;
    color: black;
}


.main-header div {
    box-sizing: border-box;
    padding-bottom: 20px;
    margin-right: 20px;
    float: right;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
    background-color: grey
}

.main-header div ul {
    list-style-type: none;
}

.main-header div ul li {
    display: inline-block;
    margin-left: 25px;
    
    
}

.earth {
    height: 400px;
    width: 100%;
    margin-bottom: 25px;
    background-image: url(../assets/image/space-view-of-earth.png);
    background-size: cover;
    background-position: center;
}

h2{
    display: inline;
    text-decoration: underline;
    font-size: 50px;
    color: navy;
    margin-left: 150px;
}

h2::after{
    position: absolute;
    display: inline;
    content: "";
    height: 200px;
    margin: 0 2rem;
    border-right: .3rem solid black;
}

article p{
    display:inline-block;
    flex-wrap: wrap;
    font-size: 20px;
    margin: 2px 0 400px 450px;
}
h3{
    display: inline;
    text-decoration: underline;
    font-size: 50px;
    color: navy;
    margin-left: 150px;
}
h3::after{
    position: absolute;
    display: inline;
    content: "";
    height: 1000px;
    margin: 0 2rem;
    border-right: .3rem solid black;
}
  .main-card{
    filter: brightness(40%);
    background-image: url(./image/Screenshot\ 2022-12-27\ at\ 6.27.08\ PM.png);
    margin-left: 400px;
    display: center;
    border: 20px;
    padding: 70px;
    border-style: solid;
    border-width: 3px;
    border-color: lightseagreen;
  }
  
  .main-card header{
    text-align: center;
    padding: 10px;
    background: #13293d;
    color: #fff;
    margin-left: -70px;
    margin-top: 30px;
    float: left;
  }
  
  
  .main-card p {
    text-align: center;
    padding: 10px;
    background: #13293d;
    color: #fff;
    margin-left: -79px;
    float: left;
  }
 .main-card:hover{
    cursor: pointer;
    filter: brightness(100%);
    opacity: 4;
 }
.main-card a.week1::after{
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: ' ';
}

